--- a/src/app/main/pages/tecnology/tecnology.component.html
+++ b/src/app/main/pages/tecnology/tecnology.component.html
@@ -17,7 +17,7 @@
               <div class="col-12 col-md-3 p-2">
                <img src="./../../../../assets/images/react.png" width="160" height="100">
               </div>
-              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #f0fbff">
                 <p>Para aplicaciones web dinámicas y altamente interactivas que cautiven a tus usuarios y se destaquen en el mercado </p>
               </div>
             </div>
@@ -31,7 +31,7 @@
               <div class="col-12 col-md-3 p-2">
                <img src="./../../../../assets/images/angular.png" width="150" height="90">
               </div>
-              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #f0fbff">
                 <p>Para aplicaciones web complejas y de alto rendimiento con facilidad, 
                     garantizando una experiencia de usuario excepcional en todos los dispositvos.
                    </p>
@@ -47,7 +47,7 @@
             <div class="col-12 col-md-3 p-2">
              <img src="./../../../../assets/images/powerapps.jpg" width="150" height="90">
             </div>
-            <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
+            <div class="col-12 col-md-9 rounded p-2"  style="background-color: #f0fbff">
               <p>Para crear rapidamente aplicaciones personalizadas que se integren perfectamente con tus sistemas existentes, aumentando la productividad
                 y la eficiencia en toda la organización.
                  </p>
@@ -59,11 +59,11 @@
     <div class="col-12 col-lg-12">
       <div class="card border-0">
         <div class="card-body p-4 p-xxl-5">
-          <div class="row align-items-center">
-            <div class="col-12 col-md-3 p-2 text-center">
-             <img src="./../../../../assets/images/appian.png" width="80" height="60">
+          <div class="row">
+            <div class="col-12 col-md-3 p-2 text-right">
+             <img src="./../../../../assets/images/appian.png" width="120" height="50">
             </div>
-              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #f0fbff">
               <p>Para diseñar, ejecutar y optimizar procesos empresariales complejos de manera rápida y sencilla
                  </p>
             </div>
