--- a/src/app/main/components/modal/modal.component.html
+++ b/src/app/main/components/modal/modal.component.html
@@ -7,8 +7,8 @@
   tabindex="-1"
   role="dialog"
   [ngStyle]="{'display':displayStyle}"> 
-  <div class="modal-dialog modal-lg" role="document"> 
-    <div class="modal-content"> 
+  <div class="modal-dialog modal-lg" role="document" > 
+    <div class="modal-content p-2" style="background-color: #f0fbff;"> 
       <form [formGroup]="huEditForm" (ngSubmit)="onSubmit()">
       <div class="modal-header">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closePopup()"></button>
