--- a/src/app/main/components/status/status.component.html
+++ b/src/app/main/components/status/status.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex flex-row ">
-   <div class="p-2">
+   <div class="">
     <svg width="20" height="20" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
         <path [attr.fill]="color" d="M8 3a5 5 0 100 10A5 5 0 008 3z"/>
     </svg>
    </div>
-   <div class="p-2">
+   <div class="">
     {{descripcion}}
     </div>
 </div>
