--- a/src/app/main/pages/list-request/list-request.component.html
+++ b/src/app/main/pages/list-request/list-request.component.html
@@ -1,6 +1,6 @@
 
 <div class="row gy-4 gy-md-5 gy-lg-0">
-    <h4 class="border-bottom border-info col-md-6 p-2">Mis aplicaciones</h4>
+    <h4 class="border-bottom border-info col-md-6 p-2">Solicitudes</h4>
       <div class="col-12 col-lg-12 mt-5">
         <div class="row p-2 mb-2">
           <div class="col-md-1">
@@ -45,7 +45,7 @@
                 <td>{{ request.emialCustomer}} <br> {{ request.phone }}</td>
                 <td><app-status [stage]="request.state"></app-status></td>
                 <td> 
-                  <button class="btn btn-light btn-sm" [routerLink]="['/main/aplicacion', request.id]"> 
+                  <button class="btn btn-light btn-sm" [routerLink]="['/main/app', request.id]"> 
                   <svg fill="#000000" width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21,12a1,1,0,0,0-1,1v6a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V5A1,1,0,0,1,5,4h6a1,1,0,0,0,0-2H5A3,3,0,0,0,2,5V19a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V13A1,1,0,0,0,21,12ZM6,12.76V17a1,1,0,0,0,1,1h4.24a1,1,0,0,0,.71-.29l6.92-6.93h0L21.71,8a1,1,0,0,0,0-1.42L17.47,2.29a1,1,0,0,0-1.42,0L13.23,5.12h0L6.29,12.05A1,1,0,0,0,6,12.76ZM16.76,4.41l2.83,2.83L18.17,8.66,15.34,5.83ZM8,13.17l5.93-5.93,2.83,2.83L10.83,16H8Z"/></svg>
                  </button> 
                 </td>
