--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -7,7 +7,7 @@
                     <div class="card-body">
                         <div class="row">
                           <div class="col">
-                            <a href="auth/" class="list-group-item">
+                            <a href="" class="list-group-item">
                                 <div class="row">
                                     <div class="col " style="text-align: right;">
                                         <div class="h5 mb-0 font-weight-bold">Paola <br> Cotrina</div>
